# src/controllers/locations/updateDeleteLocation.js
@@ -1,5 +1,49 @@
 import models from '../../database/models';
 
+export const validateLocationToUpdate = async (req, res, next) => {
+  if (req.body.name) {
+    req
+      .checkBody('name', 'name is required')
+      .notEmpty().isString()
+      .ltrim();
+  }
+  if (req.body.males) {
+    req
+      .checkBody('males', 'males is required')
+      .notEmpty()
+      .isInt()
+      .ltrim();
+  }
+  if (req.body.females) {
+    req
+      .checkBody('females', 'females is required')
+      .notEmpty()
+      .isInt()
+      .ltrim();
+  }
+  if (req.body.parent) {
+    req
+      .checkBody('parent', 'please provide a value')
+      .notEmpty().isInt()
+      .ltrim();
+    try {
+      if (parseInt(req.body.parent, 10)) {
+        const parent = await models.Location.findOne({ where: { id: req.body.parent } });
+        if (!parent) {
+          return res.status(404).json({
+            message: 'No such location',
+          });
+        }
+      }
+    } catch (error) {
+      return res.status(400).json({ errors: 'An error occurred' });
+    }
+  }
+  const validationErrors = req.validationErrors();
+  if (validationErrors) return res.status(422).json({ errors: validationErrors });
+  return next();
+};
+
 export const updateLocation = async (req, res) => {
   try {
     const [didUpdate, updated] = await models.Location.update(
@@ -14,12 +58,17 @@ export const updateLocation = async (req, res) => {
 
 export const deleteLocation = async (req, res) => {
   try {
+    await models.Location.update({ parent: null }, {
+      where: {
+        parent: req.params.id,
+      },
+    });
     await models.Location.destroy({
       where: {
         id: req.params.id,
       },
     });
-    res.status(200).json({ message: 'This has been successfully deleted' });
+    res.status(200).json({ message: 'This location has been successfully deleted' });
   } catch (e) {
     res.status(400).json({ error: e.message });
   }
